get recyclerview of events working with the favourite star, which then animates the movement of the favourited event to the top, and scrolls to that position. had to stop using ListAdapter and use a custom ListUpdateCallback to ensure there was no animation when an event was unfavourited. :star:

--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cvEventRow"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
@@ -47,7 +48,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvEventName"
             />
-        <CheckBox android:id="@+id/checkbox_favourite"
+        <CheckBox android:id="@+id/cbFavourite"
             style="?android:attr/starStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
